<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_app"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#007BDD"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_time_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_now"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#F44336"/>

    <EditText
        android:id="@+id/et_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hint_enterWork" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_title"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/enter_hour_hint" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute_title"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/enter_minute_hint" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_add_work"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_work_btn"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="16dp"/>

    <ListView
        android:id="@+id/lv_works"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>